<resources>
    <string name="app_name">DataRepository</string>
    <string name="welcome">Welcome To Data Repository</string>
    <string name="placeholder_text">This is PlaceHolder Text.</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="error_title">Error Page</string>
    <string name="EMAIL_ERROR">Invalid email</string>
    <string name="REQUIRED_FIELD">Required field</string>
    <string name="FIELD_SHORT">Too short</string>
    <string name="log_out">Log Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Are You Sure?</string>
    <string-array name="loginTitleArray">
        <item>Login</item>
        <item>Register</item>
    </string-array>
    <string-array name="drawer_list">
        <item>Home</item>
        <item>Music</item>
        <item>Movies</item>
        <item>Games</item>
        <item>Documents</item>
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>
    <string-array name="settings_list">
        <item>Notifications</item>
        <item>Update Account Details</item>
        <item>Delete Account</item>
        <item>Change Password</item>
        <item>About</item>
        <item>Help</item>
    </string-array>
    <string-array name="chooser_list">
        <item>Gallery</item>
        <item>Drive</item>
        <item>DropBox</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youtube">Play on YouTube</string>
    <string name="fragment_error">Some mal-function may have occurred!</string>
    <string name="relaunch">Re-Start Application</string>
    <string name="email_label">E-Mail:</string>
    <string name="email">E-Mail</string>
    <string name="pass_label">Password:</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="first_name_label">First Name:</string>
    <string name="first_name">First name</string>
    <string name="last_name_label">Last Name:</string>
    <string name="last_name">Last name</string>
    <string name="user_name_label">User Name:</string>
    <string name="user_name">User name</string>
    <string name="blank">Can\'t be blank</string>
    <string name="registering">Registering</string>
    <string name="user_exists">User Exists</string>
    <string name="logging_in">Logging in...</string>
    <string name="wrong_details">Wrong Details</string>
    <string name="file_chooser_error">Couldn\'t load file</string>
    <string name="read_permission">Requires Permission to access files</string>
    <string name="ok">Ok</string>
    <string name="no_permission">Couldn\'t get Permission</string>
    <string name="disabled_image">Disabled in accordance</string>
    <string name="log_has_permission">Has Permissions</string>
    <string name="log_got_permissions">Got Permissions</string>
    <string name="log_user_created">User created ID</string>
    <string name="internal_error">Android Internal Error</string>
    <string name="select_image_file">Please select an image file(jpeg or png)</string>
    <string name="image_error">Error while processing Image</string>
    <string name="no_result">No Results</string>
    <string name="no_changes">No changes made</string>
    <string name="log_update_complete">Update complete</string>
    <string name="select_file">Select an image to add</string>
    <string name="storage">storage</string>
    <string name="already_called">Already got the instance</string>
    <string name="change_username">Change UserName</string>
    <string name="change_email">Change Email</string>
    <string name="click_to_edit">Click to edit</string>
    <string name="could_not_update">Couldn\'t Update</string>
    <string name="notification">Notifications</string>
    <string name="delete_user">Delete Your Account?</string>
    <string name="update_user">Update</string>
    <string name="update_success">Updated Successfully</string>
    <string name="update_failed">Update Failed</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Enter Old Password</string>
    <string name="cancel">Cancel</string>
    <string name="new_pass_label">New Password:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="password_match_error">Password\'s don\'t match</string>
    <string name="password_updated">Password Updated</string>
    <string name="checked">Checked</string>
    <string name="deleted">deleted</string>
    <string name="from_where">Upload from where</string>
    <string name="search_for">Search for</string>
    <string name="go">Go</string>
    <string name="search">Search</string>
</resources>
