<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.repositoryworks.datarepository.fragments.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:labelFor="@+id/first_name"
            android:text="@string/first_name_label"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/first_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/first_name"
            android:padding="@dimen/dp_5" />

        <TextView
            android:id="@+id/last_name_label"
            android:labelFor="@+id/last_name"
            android:text="@string/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/last_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:textSize="@dimen/sp_18"
            android:hint="@string/last_name"
            android:background="@drawable/edit_text_bg"
            android:padding="@dimen/dp_5"/>

        <TextView
            android:id="@+id/user_name_label"
            android:labelFor="@+id/user_name"
            android:text="@string/user_name_label"
            android:textColor="@android:color/black"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/sp_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/user_name"
            android:inputType="text"
            android:hint="@string/user_name"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:padding="@dimen/dp_5" />

        <TextView
            android:id="@+id/email_label"
            android:labelFor="@+id/email"
            android:textSize="@dimen/sp_18"
            android:text="@string/email_label"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="@dimen/dp_5"
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/password_label"
            android:text="@string/pass_label"
            android:textSize="@dimen/sp_18"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/edit_text_bg"
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/signup"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>