<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.repositoryworks.datarepository.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/login_layout"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_22"
            android:labelFor="@+id/email"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:gravity="start"
            android:textSize="@dimen/sp_20"
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/edit_text_bg"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/password_label"
            android:labelFor="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_label"
            android:textSize="@dimen/sp_22"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/pass"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_20"
            android:padding="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/edit_text_bg"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>

</LinearLayout>