<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorPrimaryDark"
    android:alpha="0.95">

    <ImageView
        android:id="@+id/change_password_cancel"
        android:src="@drawable/ic_close_white_36dp"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_45"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/dp_45"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/new_password_label"
            android:labelFor="@+id/new_password"
            android:text="@string/new_pass_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <EditText
            android:id="@+id/new_password"
            android:hint="@string/pass"
            android:padding="@dimen/dp_5"
            android:inputType="textVisiblePassword"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/edit_text_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/confirm_password_label"
            android:text="@string/confirm_password_label"
            android:labelFor="@+id/confirm_password"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <EditText
            android:id="@+id/confirm_password"
            android:hint="@string/confirm_password"
            android:padding="@dimen/dp_5"
            android:inputType="textVisiblePassword"
            android:background="@drawable/edit_text_bg"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

    </LinearLayout>

    <Button
        android:id="@+id/change_button"
        android:text="@string/change_password"
        android:textSize="@dimen/sp_18"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="@dimen/dp_10"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>